src/test/deca/context/invalid/homeMade/tests/test317_variable_void1.deca
// test invalide de la règle 3.17

{
    void a;
}
